# Ascetic

./: README.md  TODO  ascetic.desktop.in  ascetic.service.in  config.mk  makefile  meson.build
source/: app_window.c  app_window.h  binbox.c  binbox.h  defer.h  globals.h  main.c  settings_page.c  settings_page.h  uri.c  uri.h  webview.c  webview.h
source/blueprints/: app_window.blp  binbox.blp  settings_page.blp  window_main.blp
source/data/: block-images.json  data.gresource.xml.pre
